--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,13 @@ spring.application.name=restapi-mysql-crud
 # ---- MySQL connection (update username/password) ----
 spring.datasource.url=jdbc:mysql://localhost:3306/demo_crud?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=password
+spring.datasource.password=jibash143
 
 # ---- JPA ----
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+spring.sql.init.mode=always
+spring.jpa.defer-datasource-initialization = trur
+
